@@ -8,7 +8,7 @@ use Params::Validate qw( validate );
 use vars qw( $VERSION );
 
 my $UNDEF_CHAR;
-my ( @FIELDS, %FIELD_LENGTH );
+my ( @FIELDS, %FIELD_LENGTH, @TIME_FIELDS );
 
 BEGIN
 {
@@ -22,6 +22,7 @@ BEGIN
                 year => 4, month => 2, day => 2, 
                 hour => 2, minute => 2, second => 2, nanosecond => 9,
                 time_zone => 0, locale => 0 );
+    @TIME_FIELDS = qw( hour minute second nanosecond );
 
     # Generate named accessors
 
@@ -109,11 +110,7 @@ BEGIN
     }
 }
 
-sub _nanosecond {
-    defined $_[0]->nanosecond ? 
-    $_[0]->nanosecond :
-    $UNDEF_CHAR x 9
-}
+*_nanosecond = \&_format_nanosecs;
 
 *mon = \&month;
 *day_of_month = \&day;
@@ -181,8 +178,15 @@ sub now {
 sub from_object {
     return (shift)->_from_datetime( DateTime->from_object( @_ ) );
 }
+
 sub from_day_of_year {
-    return (shift)->_from_datetime( DateTime->from_day_of_year( @_ ) );
+    my $self = shift;
+    my %param = @_;
+    my $result = $self->_from_datetime( DateTime->from_day_of_year( @_ ) );
+    for ( @TIME_FIELDS ) {
+        $result->set( $_, undef ) unless defined $param{$_};
+    }
+    return $result;
 }
 
 sub today
@@ -412,11 +416,11 @@ my %formats =
       'M' => sub { $_[0]->_minute }, 
       'n' => sub { "\n" }, # should this be OS-sensitive?
       'N' => sub { (shift)->_format_nanosecs( @_ ) },   
-      'p' => sub { $_[0]->_am_pm },           
-      'P' => sub { lc $_[0]->_am_pm },     
+      'p' => sub { $_[0]->_format_am_pm },           
+      'P' => sub { lc $_[0]->_format_am_pm },     
       'r' => sub { $_[0]->strftime( '%I:%M:%S %p' ) },
       'R' => sub { $_[0]->strftime( '%H:%M' ) },
-      's' => sub { $_[0]->_epoch }, 
+      's' => sub { $_[0]->_format_epoch }, 
       'S' => sub { $_[0]->_second }, 
       't' => sub { "\t" },
       'T' => sub { $_[0]->strftime( '%H:%M:%S' ) },
@@ -458,14 +462,14 @@ my %formats =
 
 $formats{h} = $formats{b};
 
-sub _epoch {
+sub _format_epoch {
     my $epoch;
     $epoch = $_[0]->epoch;
     return $UNDEF_CHAR x 6 unless defined $epoch;
     return $epoch;
 }
 
-sub _am_pm { 
+sub _format_am_pm { 
   defined $_[0]->locale ?
   $_[0]->locale->am_pm( $_[0] ) :
   $UNDEF_CHAR x 2
@@ -850,6 +854,19 @@ Such values are generated by expressions like '10:30',
 '2003', and 'dec-14'.
 
 
+=head1 ERROR HANDLING
+
+Constructor and mutator methods (such as C<new> and C<set>) 
+will C<die> if there is an attempt to set the datetime 
+to an invalid value.
+
+Invalid values are detected by setting the appropriate
+fields of a C<base> datetime object. See the C<set_base> method.
+
+Accessor methods (such as C<day>) will return either a
+value or C<undef>. Accessors will never C<die>.
+
+
 =head1 "DATETIME" METHODS
 
 =over 4
@@ -867,10 +884,7 @@ time component: "year", "month", "day", "hour",
 accepts a "time_zone", a "locale" parameter,
 and a "base" parameter.
 
-The "base" parameter is used as a default base datetime 
-in the "to_datetime" method. It is also used for validating
-inputs to the "set" method. 
-There is no default "base".
+C<new> also accepts a C<base> parameter. See the C<set_base> method.
 
 C<new> without parameters creates a completely undefined datetime:
 
@@ -991,7 +1005,8 @@ argument.  Instead, it requires both "year" and "day_of_year".  The
 day of year must be between 1 and 366, and 366 is only allowed for
 leap years.
 
-It creates a C<DateTime::Incomplete> object with all fields defined.
+It creates a C<DateTime::Incomplete> object with all date fields defined.
+Time fields (hour/minute/...) must be explicitly defined.
 
 
 =item * from_object( object => $object, ... )
@@ -1061,6 +1076,9 @@ inputs to the "set" method.
 The base object must use the year/month/day system. 
 Most calendars use this system: Gregorian (C<DateTime>),
 Julian, and others.
+
+The default value for "base" is C<undef>, which
+means no validation is made on input.
 
 
 =item * base
